add template option on frontend and process it at backend
