# internal/handler/repo.go
@@ -1,7 +1,12 @@
 package handler
 
 import (
+	"errors"
+	"log/slog"
 	"net/http"
+	"slices"
+	"strconv"
+	"strings"
 	"time"
 
 	"github.com/mkrepo-dev/mkrepo/internal/database"
@@ -67,8 +72,9 @@ func MkrepoCreate(db *database.DB, repomaker *mkrepo.RepoMaker, providers provid
 		// TODO: Handler if account is nil
 		// TODO: Do better validation of input values
 
-		repo, err := types.CreateRepoFromForm(r)
+		repo, err := CreateRepoFromForm(r)
 		if err != nil {
+			slog.Warn("Failed to parse form", "error", err)
 			http.Error(w, "invalid form", http.StatusBadRequest)
 			return
 		}
@@ -95,4 +101,131 @@ func MkrepoCreate(db *database.DB, repomaker *mkrepo.RepoMaker, providers provid
 
 		http.Redirect(w, r, url, http.StatusFound)
 	})
+}
+
+func ptr[T any](v T) *T {
+	return &v
+}
+
+func CreateRepoFromForm(r *http.Request) (*types.CreateRepo, error) {
+	err := r.ParseForm()
+	if err != nil {
+		return nil, errors.New("invalid form")
+	}
+
+	// TODO: Do validation somewhere else. Just set values here.
+	name := r.FormValue("name")
+	if name == "" {
+		return nil, errors.New("name is required")
+	}
+	namespace := r.FormValue("owner")
+	var description *string
+	descriptionStr := r.FormValue("description")
+	if descriptionStr != "" {
+		description = &descriptionStr
+	}
+	var visibility *types.CreateRepoVisibility
+	var formVisibility types.CreateRepoVisibility = types.CreateRepoVisibility(r.FormValue("visibility"))
+	if slices.Contains([]types.CreateRepoVisibility{types.Private, types.Public}, formVisibility) {
+		visibility = &formVisibility
+	} else {
+		return nil, errors.New("invalid visibility")
+	}
+
+	var sha256 *bool
+	if r.Form.Has("sha256") {
+		sha256 = ptr(true)
+	}
+
+	// TODO: Handle nil and move from db find better place
+	providerUsername := strings.Split(r.FormValue("provider"), ":")
+	provider, username := providerUsername[0], providerUsername[1]
+	account := database.GetAccount(middleware.Accounts(r.Context()), provider, username)
+	var tag *string
+	if r.Form.Has("tag") {
+		tag = ptr("v0.0.0")
+	}
+	var template *types.CreateRepoTemplate
+	templateStr := r.FormValue("template")
+	if templateStr != "" {
+		nameVersion := strings.Split(templateStr, "@")
+		if len(nameVersion) != 2 {
+			return nil, errors.New("invalid template name version")
+		}
+		template = &types.CreateRepoTemplate{
+			FullName: nameVersion[0],
+			Version:  &nameVersion[1],
+		}
+	}
+
+	var readme *bool
+	if r.Form.Has("readme") {
+		readme = ptr(true)
+	}
+	var gitignore *string
+	gitignoreStr := r.FormValue("gitignore")
+	if gitignoreStr != "" {
+		gitignore = &gitignoreStr
+	}
+	var dockerfile *string
+	dockerfileStr := r.FormValue("dockerfile")
+	if dockerfileStr != "" {
+		dockerfile = &dockerfileStr
+	}
+	var dockerignore *bool
+	if r.Form.Has("dockerignore") {
+		dockerignore = ptr(true)
+	}
+	var license *types.CreateRepoInitializeLicense
+	licenseStr := r.FormValue("license")
+	if licenseStr != "" {
+		var licenseFullName *string
+		licenseFullNameStr := r.FormValue("license-fullname")
+		if licenseFullNameStr != "" {
+			licenseFullName = &licenseFullNameStr
+		}
+		var licenseProject *string
+		licenseProjectStr := r.FormValue("license-project")
+		if licenseProjectStr != "" {
+			licenseProject = &licenseProjectStr
+		}
+		var year *int
+		yearStr := r.FormValue("license-year")
+		if yearStr != "" {
+			yearInt, err := strconv.Atoi(r.FormValue("license-year"))
+			if err != nil {
+				return nil, errors.New("invalid license year")
+			}
+			year = &yearInt
+		}
+		license = &types.CreateRepoInitializeLicense{
+			Key:      licenseStr,
+			Fullname: licenseFullName,
+			Project:  licenseProject,
+			Year:     year,
+		}
+	}
+
+	repo := &types.CreateRepo{
+		Name:        name,
+		Namespace:   namespace,
+		Description: description,
+		Visibility:  visibility,
+		Sha256:      sha256,
+		Initialize: &types.CreateRepoInitialize{
+			Author: types.CreateRepoInitializeAuthor{
+				Name:  account.DisplayName,
+				Email: account.Email,
+			},
+			Template:     template,
+			Tag:          tag,
+			Readme:       readme,
+			Gitignore:    gitignore,
+			Dockerfile:   dockerfile,
+			Dockerignore: dockerignore,
+			License:      license,
+		},
+	}
+
+	return repo, nil
 }
